# ajedrez

./: README.md  ajedrez.py  setup.cfg  testing.ipynb  tests.py
turbo_ajedrez/: __init__.py  turbo_ajedrez.py
