[metadata]
name = turbo_ajedrez
version = attr: turbo_ajedrez.__version__
author = Oren Zeev-Ben-Mordehai
author_email = zbenmo@gmail.com
url = https://github.com/zbenmo/ajedrez
description = Chess board - enumerate possible moves fast - immutable boards. Each move comes with the resulting board.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Chess
license_files = LICENSE.txt
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    tqdm

[options.extras_require]
examples =
    jupyterlab
    pandas

test =
    pytest


[options.package_data]
* = README.md